package se.leiden.asedajvf.enums;

public enum BookingStatus {
    PENDING,
    CONFIRMED,
    CANCELLED
}
