package se.leiden.asedajvf.enums;

public enum Role {
    ADMIN,INSTRUCTOR,USER
}
