@startuml
!define RECTANGLE class

RECTANGLE Member {
  + member_id: int
  + first_name: varchar
  + last_name: varchar
  + email: varchar
  + password_hash: varchar
  + role: Role
  + membershipPaidUntil: LocalDate
  + active: boolean
}

RECTANGLE Booking {
  + booking_id: int
  + court_id: int
  + member_id: int
  + start_time: datetime
  + end_time: datetime
  + status: BookingStatus
}

RECTANGLE Facility {
  + facility_id: int
  + facility_name: varchar
  + facility_description: text
  + opening_hours: varchar
}

RECTANGLE ShootingSession {
  + session_id: int
  + leader_id: int
  + start_time: datetime
  + end_time: datetime
}

RECTANGLE ShootingResult {
  + result_id: int
  + session_id: int
  + member_id: int
  + target_id: int
  + score: int
}

RECTANGLE PaymentLog {
  + payment_id: int
  + member_id: int
  + payment_date: LocalDate
  + amount: BigDecimal
  + payment_method: String
}

RECTANGLE News {
  + news_id: int
  + title: varchar
  + description: text
  + image_url: varchar
  + file_url: varchar
  + date_created: datetime
  + date_updated: datetime
  + created_by: int
}

enum Role {
  ADMIN
  MEMBER
}

enum BookingStatus {
  CONFIRMED
  CANCELED
}

enum TargetType {
  AIR_RIFLE_10M
  RAPID_FIRE_25M
}

RECTANGLE IMemberRepository {
  + find_by_email()
  + find_by_id()
  + save()
}

RECTANGLE IBookingRepository {
  + find_by_member_id()
  + save()
}

RECTANGLE IFacilityRepository {
  + find_all()
  + find_by_id()
  + save()
}

RECTANGLE IShootingSessionRepository {
  + find_all()
  + save()
}

RECTANGLE IShootingResultRepository {
  + find_by_member_id()
  + save()
}

RECTANGLE PaymentLogRepository {
  + find_by_member_id()
  + save()
}

RECTANGLE INewsRepository {
  + find_all()
  + find_by_id()
  + save()
  + find_by_member_id()
}

RECTANGLE MemberService {
  + register()
  + login()
  + update_profile()
}

RECTANGLE BookingService {
  + create_booking()
  + cancel_booking()
}

RECTANGLE FacilityService {
  + register_facility()
  + update_facility()
}

RECTANGLE ShootingSessionService {
  + create_session()
  + add_shooter()
}

RECTANGLE ShootingResultService {
  + log_result()
  + get_results_by_member()
}

RECTANGLE PaymentLogService {
  + record_payment()
  + get_payments_by_member()
}

RECTANGLE NewsService {
  + create_news()
  + update_news()
  + delete_news()
  + get_all_news()
}

RECTANGLE MemberController {
  + register()
  + login()
  + update_profile()
}

RECTANGLE BookingController {
  + create_booking()
  + cancel_booking()
}

RECTANGLE FacilityController {
  + register()
  + update_facility()
}

RECTANGLE ShootingSessionController {
  + create_session()
  + log_result()
}

RECTANGLE ShootingResultController {
  + get_results()
  + log_result()
}

RECTANGLE PaymentLogController {
  + record_payment()
  + view_payments()
}

RECTANGLE NewsController {
  + create_news()
  + update_news()
  + delete_news()
  + view_news()
}

Member --|> PaymentLog : has payments
Member --|> Booking : makes
Member --|> ShootingResult : has
Member --|> ShootingSession : leads
Member --|> News : creates

PaymentLog --> Member : belongs to
News --> Member : created by

Booking --> ShootingSession : occurs in
ShootingSession --> ShootingResult : contains
ShootingResult --> TargetType : uses

Booking --> Facility : made for

IFacilityRepository --> Facility : manages
IMemberRepository --> Member : works with
IBookingRepository --> Booking : manages
IShootingSessionRepository --> ShootingSession : handles
IShootingResultRepository --> ShootingResult : handles
PaymentLogRepository --> PaymentLog : manages
INewsRepository --> News : manages

MemberService --> IMemberRepository : uses
BookingService --> IBookingRepository : uses
FacilityService --> IFacilityRepository : uses
ShootingSessionService --> IShootingSessionRepository : uses
ShootingResultService --> IShootingResultRepository : uses
PaymentLogService --> PaymentLogRepository : uses
NewsService --> INewsRepository : uses

MemberController --> MemberService : delegates to
BookingController --> BookingService : delegates to
FacilityController --> FacilityService : delegates to
ShootingSessionController --> ShootingSessionService : delegates to
ShootingResultController --> ShootingResultService : delegates to
PaymentLogController --> PaymentLogService : delegates to
NewsController --> NewsService : delegates to
@enduml
